--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,85 +24,6 @@ env:
   RUST_TOOLCHAIN_COMPONENTS: rustfmt clippy
 
 jobs:
-  format:
-    name: Format
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: "true"
-      - name: Setup rust toolchain
-        uses: ./.github/actions/toolchains/rust
-        with:
-          toolchain: ${{ env.RUST_TOOLCHAIN_VERSION }}
-          components: ${{ env.RUST_TOOLCHAIN_COMPONENTS }}
-      - name: Check Formatting
-        run: cargo fmt --all -- --check
-
-  clippy:
-    name: Clippy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: "true"
-      - name: Setup rust toolchain
-        uses: ./.github/actions/toolchains/rust
-        with:
-          toolchain: ${{ env.RUST_TOOLCHAIN_VERSION }}
-          components: ${{ env.RUST_TOOLCHAIN_COMPONENTS }}
-      - uses: Swatinem/rust-cache@v2
-      - name: Clippy Lints
-        run: cargo clippy --all-targets --all-features -- -D warnings
-
-  web-check:
-    name: Check web files
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: "true"
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - name: npm install
-        run: npm install
-      - name: npm check
-        run: npm run check
-
-  build:
-    name: Build and test
-    strategy:
-      matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
-
-    runs-on: ${{matrix.os}}
-
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: "true"
-      - name: Setup rust toolchain
-        uses: ./.github/actions/toolchains/rust
-        with:
-          toolchain: ${{ env.RUST_TOOLCHAIN_VERSION }}
-          components: ${{ env.RUST_TOOLCHAIN_COMPONENTS }}
-      - name: Add additional Rust targets
-        run: |
-          rustup target add aarch64-apple-darwin
-        if: matrix.os == 'macos-latest'
-      - uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-      - uses: Swatinem/rust-cache@v2
-      - name: Prereqs
-        run: python ./prereqs.py --install
-      - name: Build and Test
-        run: python ./build.py --no-check
-
   integration-tests:
     name: Integration tests
     if: ${{ ! github.event.pull_request }}
@@ -138,53 +59,72 @@ jobs:
       - name: Run integration tests
         run: python ./build.py --no-check --no-test --wasm --npm --vscode --integration-tests
 
-  runBenchmark:
-    name: run benchmark
-    runs-on: ubuntu-latest
+  integration-tests-two:
+    name: Integration tests 2
+    if: ${{ ! github.event.pull_request }}
+    timeout-minutes: 15
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest, macos-latest]
+
+    runs-on: ${{matrix.os}}
+
     steps:
       - uses: actions/checkout@v3
-      - uses: boa-dev/criterion-compare-action@v3
         with:
-          branchName: ${{ github.base_ref }}
-          cwd: "compiler/qsc"
-        if: ${{ github.base_ref != null }}
-
-  runMemoryProfile:
-    name: run memory profile
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+          submodules: "true"
+      - name: Setup rust toolchain
+        uses: ./.github/actions/toolchains/rust
         with:
-          ref: main
+          toolchain: ${{ env.RUST_TOOLCHAIN_VERSION }}
+          components: ${{ env.RUST_TOOLCHAIN_COMPONENTS }}
+      - name: Add additional Rust targets
+        run: |
+          rustup target add aarch64-apple-darwin
+        if: matrix.os == 'macos-latest'
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
       - uses: Swatinem/rust-cache@v2
-      - run: |
-          MAIN_MEASUREMENT=$(cargo run --bin memtest)
-          echo "MAIN_MEASUREMENT<<EOF" >> $GITHUB_ENV
-          echo "$MAIN_MEASUREMENT" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-      - run: |
-          echo "${{env.MAIN_MEASUREMENT}}"
-          echo $MAIN_MEASUREMENT
+      - name: Prereqs
+        run: python ./prereqs.py --install
+      - name: Run integration tests
+        run: python ./build.py --no-check --no-test --wasm --npm --vscode --integration-tests
 
-      - uses: actions/checkout@v2
-      - run: |
-          BRANCH_MEASUREMENT=$(cargo run --bin memtest)
-          echo "BRANCH_MEASUREMENT<<EOF" >> $GITHUB_ENV
-          echo "$BRANCH_MEASUREMENT" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-      - run: |
-          echo "${{env.BRANCH_MEASUREMENT}}"
-          echo $BRANCH_MEASUREMENT
-      - uses: actions/github-script@v6
+  integration-tests-three:
+    name: Integration tests 3
+    if: ${{ ! github.event.pull_request }}
+    timeout-minutes: 15
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest, macos-latest]
+
+    runs-on: ${{matrix.os}}
+
+    steps:
+      - uses: actions/checkout@v3
         with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `## Memory Report for ${{ github.sha }}
-            | Test                        | This Branch | On Main  |
-            |-----------------------------|-------------|----------|
-            | compile core + standard lib | ${{ env.BRANCH_MEASUREMENT }} bytes | ${{ env.MAIN_MEASUREMENT }} bytes |`
-            })
-        if: ${{ github.base_ref != null }}
+          submodules: "true"
+      - name: Setup rust toolchain
+        uses: ./.github/actions/toolchains/rust
+        with:
+          toolchain: ${{ env.RUST_TOOLCHAIN_VERSION }}
+          components: ${{ env.RUST_TOOLCHAIN_COMPONENTS }}
+      - name: Add additional Rust targets
+        run: |
+          rustup target add aarch64-apple-darwin
+        if: matrix.os == 'macos-latest'
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+      - uses: Swatinem/rust-cache@v2
+      - name: Prereqs
+        run: python ./prereqs.py --install
+      - name: Run integration tests
+        run: python ./build.py --no-check --no-test --wasm --npm --vscode --integration-tests
