--- a/compiler/qsc/Cargo.toml
+++ b/compiler/qsc/Cargo.toml
@@ -25,6 +25,7 @@ qsc_fir = { path = "../qsc_fir" }
 qsc_hir = { path = "../qsc_hir" }
 qsc_passes = { path = "../qsc_passes" }
 qsc_project = { path = "../qsc_project", features = ["fs"] }
+qsc_vis = { path = "../qsc_vis" }
 rustc-hash = { workspace = true }
 thiserror = { workspace = true }
 
