--- a/compiler/qsc_vis/Cargo.toml
+++ b/compiler/qsc_vis/Cargo.toml
@@ -17,6 +17,8 @@ qsc_data_structures = { path = "../qsc_data_structures" }
 qsc_frontend = { path = "../qsc_frontend" }
 qsc_fir = { path = "../qsc_fir" }
 qsc_hir = { path = "../qsc_hir" }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 
 [dev-dependencies]
 expect-test = { workspace = true }
