--- a/compiler/qsc_eval/Cargo.toml
+++ b/compiler/qsc_eval/Cargo.toml
@@ -9,6 +9,7 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+log = { workspace = true }
 miette = { workspace = true }
 num-bigint = { workspace = true }
 num-complex = { workspace = true }
